# ChangeLog for app-arch/zip
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-arch/zip/ChangeLog,v 1.7 2003/06/14 12:59:13 gmsoft Exp $

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*zip-2.3-r1 (1 Feb 2002)

  14 Jun 2003; Guy Martin <gmsoft@gentoo.org> zip-2.3-r1.ebduild :
  Added hppa to KEYWORDS.

  15 Aug 2002; Jack Morgan <jmorgan@gentoo.org> :
  Added KEYWORDS sparc64

  15 Jul 2002; Owen Stampflee <owen@gentoo.org> :
  Added KEYWORDS.

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
  
  Added initial ChangeLog which should be updated whenever the package is
  updated in any way. This changelog is targetted to users. This means that the
  comments should well explained and written in clean English. The details about
  writing correct changelogs are explained in the skel.ChangeLog file which you
  can find in the root directory of the portage repository.