@@ -1,3 +1,5 @@
 MD5 1e1b809f13797e29d4646743ec7b8323 zip-2.3-r1.ebuild 779
-MD5 abc80e13f0ffbb7682d4cbbaba7cb40b ChangeLog 984
+MD5 3276fb2669785d06bfb6c2cec123521d zip-2.3-r2.ebuild 853
+MD5 97e7d71520a7e2309f49e5d7f4951a9b ChangeLog 1168
 MD5 446598b124c5aa6073e4a431a166cc2d files/digest-zip-2.3-r1 57
+MD5 0fae982a1638aacea39c862dd7ebbea6 files/digest-zip-2.3-r2 113
