@@ -1,6 +1,11 @@
 # ChangeLog for app-arch/zip
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/zip/ChangeLog,v 1.7 2003/06/14 12:59:13 gmsoft Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-arch/zip/ChangeLog,v 1.8 2003/07/16 06:15:42 raker Exp $
+
+*zip-2.3-r2 (16 Jul 2003)  <raker@gentoo.org> zip-2.3-r2.ebuild:
+
+  Added encryption support via the crypt use variable.
+  Thanks to tobias on bug #13598 for suggesting this feature.
 
   06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
  
